Updated things to fix the colors, add new options to create a custom morph target and create a menu option using it.

--- a/RonConverter/Properties/launchSettings.json
+++ b/RonConverter/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "RonConverter": {
       "commandName": "Project",
-      "commandLineArgs": "\"H:\\MELE_Mods\\test mods\\Customizable Default Femshep Headmorph for Legendary Edition 3-168-1-0-1623501456\\LE3_HMF_HED_Iconic_Buzzcut.ron\" --gender=Female"
+      "commandLineArgs": "\"H:\\MELE_Mods\\test mods\\Customizable Default Femshep Headmorph for Legendary Edition 3-168-1-0-1623501456\\testIconic.ron\" --gender=Female --operation=Full"
     }
   }
 }
